--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 <header>
     <h1>FAVOUR AND FORTUNE</h1>
 </header>
-<div>
+
+<body>
+    <div>
     <p>What we do</p>
 </div>
 <div>
     <h1>How we achieve it</h1>
     <img src="" alt="" />
- </div>
-<body></body>
+ </div></body>
 </html>
